--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>@just_broken</title>
         <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./normal.css">
-        <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
+        <link rel="shortcut icon" href="https://play-lh.googleusercontent.com/ZcYo7MXo6XuUzjbTPOE0Dz6p25QqB6mmkpYn0WNB8odFlVkpHrpozYENhUbFpcrSrGw" type="image/x-icon">
     </head>
     <body>
         <div class="main">
@@ -15,7 +15,7 @@
                     <!-- header -->
                     <div class="title-cont">
                     <div class="profile">
-                        <img class="profile-img" src="./profile.png" alt="">
+                        <img class="profile-img" src="https://i.pinimg.com/736x/1b/5c/78/1b5c7891310798e94fe2bc08257becf5.jpg" alt="">
                     </div>
                     <div class="user-info">
                         <div class="username">@just_broken</div>
