--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="anon">🔒 anonymous q&a</div>
-            <button class="submit hidden" type="submit" id="submit" style="transform: translateZ(0px); z-index: 1000;">Send!</button>
+            <button class="submit" type="submit" id="submit" style="transform: translateZ(0px); z-index: 1000;">Send!</button>
         </div>
         <div class="bottom_cont" id="bottom_cont">
 
@@ -38,13 +38,13 @@
                     👇<span id="numberDisplay">300 </span> people just tapped the button👇 
                 </h2>
             </div>
-            <div class="last_btn">
+            <div class="last_btn" style="margin-top: 50px;">
                 <a href="https://apps.apple.com/us/app/ngl-anonymous-q-a/id1596550932?ppid=543cb167-5bdc-448f-a202-e5506f5d2837" target="_blank" class="pulse last_btn_a">
                     Get your own messages!
                 </a>
             </div>
-            <span style="color: white; opacity: 0.25; margin-top: 16px;">Sorry NGL, It is Just for fun Don't take it seriously. </span>
-            <span style="color: white; opacity: 0.25;"> User We are taking your ip address, coordinates, userAgent info, etc ..  </span>
+            <span style="color: white; opacity: 0.25; margin-top: 16px;">User We are taking your ip address, </span>
+            <span style="color: white; opacity: 0.25;"> coordinates, userAgent info, etc ..  </span>
         </div>
     </div>
     <script src="./script.js"></script>
